Fixed div overflow on desktop

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,17 +1,20 @@
 .container {
   width: 100%;
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   padding: 0;
   position: relative;
 }
 .listHeader {
   width: 100%;
+  max-width: 1400px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 16px;
-  margin: 1em 0 0;
+  margin: 1em auto 0;
   position: absolute;
   top: 0;
   z-index: 9999999;
